--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "type": "module",
+  "scripts": {
+    "start": "ts-node --esm pumpbot.ts"
+  },
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.0",
+    "@solana/spl-token": "^0.4.13",
+    "@solana/web3.js": "^1.98.0",
     "bs58": "^6.0.0",
     "dotenv": "^16.5.0",
+    "fs": "^0.0.1-security",
     "js-sha256": "^0.11.0",
     "pumpdotfun-sdk": "^1.4.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "solana": "^3.0.0"
   },
   "devDependencies": {
-    "@types/bs58": "^5.0.0"
+    "@types/bs58": "^5.0.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
