--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,12 @@
 {
-  "include": ["*.ts", "src/**/*.ts"],
   "compilerOptions": {
-    "baseUrl": "./",
-    "paths": {
-      "*": ["node_modules/*", "src/*"]
-    },
-    "target": "ES2020",
     "module": "ESNext",
-    "moduleResolution": "node",
+    "target": "ES2022",
+    "moduleResolution": "Node",
     "esModuleInterop": true,
-    "resolveJsonModule": true,
+    "strict": true,
     "skipLibCheck": true,
-    "strict": true
+    "resolveJsonModule": true
   },
   "ts-node": {
     "esm": true
