--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,4 @@ HELIUS_API_KEY = #Helius API key
 #Fee settings
 UNIT_LIMIT = 200000
 UNIT_PRICE = 100000
-SLIPPAGE = 5n #Bigint for slippage, 5n = 0.5%
+SLIPPAGE = 5 #Bigint for slippage, 5 = 0.5%
