Priority fee comment

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,5 @@ HELIUS_API_KEY = #Helius API key
 #Fee settings
 UNIT_LIMIT = 200000
 UNIT_PRICE = 100000
+#Priority fee is UNIT_PRICE * UNIT_LIMIT
 SLIPPAGE = 5 #Bigint for slippage, 5 = 0.5%
